@@ -1,3 +1,8 @@
+2006-12-28	tsch
+
+	* Cairo.xs, cairo-perl.h, t/Cairo.t: Wrap and test
+	cairo_copy_clip_rectangles and cairo_clip_extents.
+
 2006-11-23	tsch
 
 	* CairoSurface.xs, t/CairoSurface.t: Make
